# boilerplates

app_c_pp.cmake/: CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md
app_c_pp.cmake/.github/workflows/: ci.yml
app_c_pp.cmake/cmake/: dev-mode.cmake  external-lib.cmake  install-rules.cmake  sources.cmake  variables.cmake
app_c_pp.cmake/include/[[name]]/: main.hpp
app_c_pp.cmake/include/[[name]]-lib/: lib.hpp
app_c_pp.cmake/src/: lib.cpp  sources.cmake
app_c_pp.cmake/src/[[name]]/: main.cpp
app_c_pp.cmake/src/[[name]]-lib/: lib.cpp
app_c_pp.cmake/test/: CMakeLists.txt
app_c_pp.cmake/test/src/: [[name]]_test.cpp
app_c_pp.makefile/: Makefile
app_c_pp.makefile/include/: boilerutils.h  fileutils.h
app_c_pp.makefile/src/: main.cpp
app_python.zipapp/: Makefile
app_python.zipapp/src/: __main__.py  boilerutils.py
c_pp.makefile/: Makefile
c_pp.makefile/include/: boilerutils.h  fileutils.h
c_pp.makefile/src/: main.cpp
lib_c_pp.cmake/: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md
lib_c_pp.cmake/.github/workflows/: ci.yml
lib_c_pp.cmake/cmake/: external-lib.cmake  install-config.cmake  install-rules.cmake  sources.cmake  variables.cmake
lib_c_pp.cmake/include/[[name]]/: [[name]].hpp
lib_c_pp.cmake/src/[[name]]/: [[name]].cpp
lib_c_pp.cmake/test/: CMakeLists.txt
lib_c_pp.cmake/test/src/: [[name]]_test.cpp
lib_c_pp.makefile/: Makefile
lib_c_pp.makefile/include/: project.h
lib_c_pp.makefile/src/: main.cpp
python.zipapp/: Makefile
python.zipapp/src/: __main__.py
